[gd_scene load_steps=5 format=2]

[ext_resource path="res://ui/proof/written_proof_box/WrittenProofBox.gd" type="Script" id=1]
[ext_resource path="res://ui/proof/written_proof_box/Options.gd" type="Script" id=2]
[ext_resource path="res://ui/proof/written_proof/written_justification.gd" type="Script" id=3]
[ext_resource path="res://ui/proof/written_proof/written_statement.gd" type="Script" id=4]

[node name="WrittenProofBox" type="VBoxContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ActiveDependency" type="MarginContainer" parent="."]
margin_right = 1024.0

[node name="JustificationLabel" type="TextureButton" parent="."]
margin_top = 4.0
margin_right = 1024.0
margin_bottom = 4.0
script = ExtResource( 3 )

[node name="MarginContainer" type="MarginContainer" parent="."]
margin_top = 8.0
margin_right = 1024.0
margin_bottom = 8.0
custom_constants/margin_left = 30

[node name="Options" type="PanelContainer" parent="MarginContainer"]
visible = false
margin_left = 30.0
margin_right = 38.0
margin_bottom = 8.0
size_flags_horizontal = 0
script = ExtResource( 2 )

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/Options"]
margin_left = 4.0
margin_top = 4.0
margin_right = 216.0
margin_bottom = 30.0

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/Options/VBoxContainer"]
margin_right = 212.0
margin_bottom = 19.0

[node name="JustificationName" type="Label" parent="MarginContainer/Options/VBoxContainer/HBoxContainer"]
margin_top = 1.0
margin_right = 188.0
margin_bottom = 18.0
size_flags_horizontal = 3
text = "JUSTIFICATION NAME"

[node name="UnproveButton" type="Button" parent="MarginContainer/Options/VBoxContainer/HBoxContainer"]
margin_left = 192.0
margin_right = 212.0
margin_bottom = 19.0
rect_min_size = Vector2( 18, 18 )
text = "x"

[node name="JustificationDescription" type="Label" parent="MarginContainer/Options/VBoxContainer"]
visible = false
margin_left = 16.0
margin_top = 4.0
margin_right = 56.0
margin_bottom = 21.0

[node name="VBoxContainer" type="HBoxContainer" parent="MarginContainer/Options/VBoxContainer"]
margin_top = 23.0
margin_right = 212.0
margin_bottom = 26.0

[node name="Requirements" type="VBoxContainer" parent="MarginContainer/Options/VBoxContainer/VBoxContainer"]
margin_right = 100.0
margin_bottom = 3.0
rect_min_size = Vector2( 100, 0 )

[node name="HSeparator" type="VSeparator" parent="MarginContainer/Options/VBoxContainer/VBoxContainer"]
margin_left = 104.0
margin_right = 108.0
margin_bottom = 3.0

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/Options/VBoxContainer/VBoxContainer"]
margin_left = 112.0
margin_right = 212.0
margin_bottom = 3.0
rect_min_size = Vector2( 100, 0 )

[node name="Options" type="VBoxContainer" parent="MarginContainer/Options/VBoxContainer/VBoxContainer/VBoxContainer"]
margin_right = 100.0

[node name="Statement" type="Control" parent="."]
margin_top = 12.0
margin_right = 1024.0
margin_bottom = 12.0
script = ExtResource( 4 )
[connection signal="pressed" from="JustificationLabel" to="MarginContainer/Options" method="_toggle_visibility"]
